Cambiadas los avatars del section team

--- a/public/assets/scss/components/_team.scss
+++ b/public/assets/scss/components/_team.scss
@@ -39,7 +39,7 @@
         width: 20rem;
         height: 20rem;
         border-radius: 50%;
-        border: 3px solid var(--first-color-lighten);
+        border: 3px solid var(--text-color);
     }
 
     &__name {
